# python-opsi

./: .gitlab-ci.yml  pyproject.toml
OPSI/Backend/: JSONRPC.py
OPSI/System/: Linux.py  Posix.py  Windows.py
OPSI/Util/: Repository.py
